Fixed padding for headers on small screens

--- a/css/fonts_style.css
+++ b/css/fonts_style.css
@@ -87,3 +87,11 @@ ul {
 .blue-font {
   color: #267187;
 }
+
+/*================MEDIA==================*/
+
+@media (max-width: 999px) {
+ .r-col-header {
+   padding-left: 20px;
+ }
+}
