--- a/css/main_style.css
+++ b/css/main_style.css
@@ -42,4 +42,8 @@
     grid-template-columns: 100%;
     grid-template-rows: max-content max-content;
   }
+
+  ul {
+    padding-left: 25px;
+  }
 }
